# iching

./: .gitignore  CHANGELOG.md  README.md  iching.cabal
app/: Convert.hs  Hexagram.hs  Main.hs
data/: 22.json  Hexagrams.json  the-everyday-i-ching.epub
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
