cabal-version:      2.4
name:               iching
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Julian Mac Kenzie
maintainer:         jukiangm@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md
    data/*

executable iching
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Hexagram

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0, brick ^>=0.68, vty ^>=5.35.1, directory ^>=1.3.6.2, cursor ^>=0.3.2.0, aeson, bytestring, text
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded
